--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -26,3 +26,7 @@ a {
     clip-path: polygon(0 10%, 100% 10%, 100% 90%, 0 90%);
     filter: drop-shadow(0px 0px 14px #545454) drop-shadow(0px 0px 14px #545454) drop-shadow(0px 0px 14px #545454);
 }
+
+.bg_custom_card {
+    background-color: #232323;
+}
