--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -38,3 +38,17 @@ a {
     --bs-table-hover-color: #44d62c;
     --bs-table-hover-bg: #121212;
 }
+
+.btn_custom_create {
+    color: #fff;
+    background-color: transparent;
+    border: 2px solid #232323;
+    transition: color 0.3s, background-color 0.3s, border 0.3s, filter 0.3s;
+
+    &:hover {
+        color: #fff;
+        background-color: #232323;
+        border: 2px solid #fff;
+        filter: drop-shadow(0px 0px 14px #fff)drop-shadow(0px 0px 14px #545454)drop-shadow(0px 0px 14px #545454);
+    }
+}
